# humble-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  memo.rs
.forgejo/workflows/: sast.yaml  test.yaml
src/: config.rs  download.rs  error.rs  humble_api.rs  lib.rs  main.rs  models.rs  util.rs
tests/: cli.rs  models.rs
