[package]
name = "humble-cli"
authors = ["Mohammad Banisaeid <smbl64@gmail.com>"]
version = "0.19.3"
license = "MIT"
description = "The missing CLI for downloading your Humble Bundle purchases"
documentation = "https://github.com/smbl64/humble-cli"
repository = "https://github.com/smbl64/humble-cli"
readme = "README.md"
categories = ["command-line-utilities"]
edition = "2021"
exclude = [
    "docs",
    ".github",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "humble-cli"

[dependencies]
byte-unit = { version = "5.2"}

chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.60", features = ["cargo", "derive"] }
clap_complete = "4.5.60"
dirs = "6.0.0"
futures-util = "0.3"
indicatif = "0.18"
reqwest = { version = "0.13.2", features = ["json", "blocking", "query","stream"], default-features = false }
scraper = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.16.1"
derive_more = {version= "2.1.1",features = ["from", "from_str"] }
tabled = "0.20"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
anyhow = "1.0"
