[package]
name = "humble-cli"
authors = ["Benjamin Jørgensen <me@benmi.dev>"]
version = "0.0.1"
license = "MIT"
description = "The missing CLI for downloading your Humble Bundle purchases"
documentation = "https://codeberg.org/benmi/humble-cli"
repository = "https://codeberg.org/benmi/humble-cli"
readme = "README.md"
categories = ["command-line-utilities"]
edition = "2021"
exclude = [
    "docs",
    ".forgejo",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "humble-cli"

[dependencies]
byte-unit = { version = "5.2"}
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.60", features = ["cargo", "derive"] }
clap_complete = "4.5.66"
dirs = "6.0.0"
futures-util = "0.3"
indicatif = "0.18"
reqwest = { version = "0.13.2", features = ["json", "blocking", "query","stream", "rustls"], default-features = false }
scraper = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.16.1"
derive_more = {version= "2.1.1",features = ["from", "from_str"] }
tabled = "0.20"
tokio = { version = "1.49", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
anyhow = "1.0"
